Bug 1261312 - Make sure that audio/video decode task is filed again. r=jwwang

The idea is that we can call Ensure{Audio/Video}DecodeTaskQueued() directly
since the conditions in the DispatchDecodeTasksIfNeeded() have already been
checked.

MozReview-Commit-ID: 9xataQiuSIx

--HG--
extra : transplant_source : %E4t%20%1FV%12%FE%08%9Cx%D7%0A%C3C%B0M%14%80%E4%85